@@ -86,7 +86,12 @@ goto endInit
 @REM Reaching here means variables are defined and arguments have been captured
 :endInit
 
-%JCMD% -classpath %CLASSPATH% -Xmx%MEMORY% %HEADLESS% %MAIN% %CMD_LINE_ARGS%
+%JCMD% -classpath %CLASSPATH% -Xmx%MEMORY%^
+ --add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED^
+ --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED^
+ --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED^
+ --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED^
+ %HEADLESS% %MAIN% %CMD_LINE_ARGS%
 if ERRORLEVEL 1 goto error
 goto end
 
