@@ -126,6 +126,7 @@ done
   $COLLAPSE \
   -jvm --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
   -jvm --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED \
+  -jvm --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED \
   -main $MAIN \
   -doc-dir "$BASEDIR/docs" \
   $ARGS
